--- a/app/login/tmpl.html
+++ b/app/login/tmpl.html
@@ -1,22 +1,28 @@
 <div class="login-view">
     <md-content class="md-padding">
+        <img class="logo" src="img/logo.svg" alt=""/>
+
         <md-card>
             <h1>Log In</h1>
             <md-card-content>
 
-                <md-input-container class="md-icon-float">
-                    <label>Email Address</label>
-                    <md-icon md-font-set="material-icons">account_circle</md-icon>
-                    <input ng-model="user.username" type="text">
-                </md-input-container>
+                <form name="loginForm">
 
-                <md-input-container class="md-icon-float">
-                    <label>Password</label>
-                    <md-icon md-font-set="material-icons">gesture</md-icon>
-                    <input ng-model="user.pwd" type="text">
-                </md-input-container>
+                    <md-input-container class="md-icon-float">
+                        <label>Adresse Email</label>
+                        <md-icon ng-style="{color: '#014157'}" md-font-set="material-icons">account_circle</md-icon>
+                        <input ng-model="user.username" type="text">
+                    </md-input-container>
 
-                <md-button class="md-raised md-primary">Log In</md-button>
+                    <md-input-container class="md-icon-float">
+                        <label>Mot de passe</label>
+                        <md-icon ng-style="{color: '#014157'}" md-font-set="material-icons">gesture</md-icon>
+                        <input ng-model="user.pwd" type="password">
+                    </md-input-container>
+
+                    <md-button class="md-raised md-primary">Connexion</md-button>
+
+                </form>
 
             </md-card-content>
         </md-card>
