--- a/app/login/tmpl.html
+++ b/app/login/tmpl.html
@@ -20,7 +20,7 @@
                         <input ng-model="user.pwd" type="password">
                     </md-input-container>
 
-                    <md-button class="md-raised md-primary">Connexion</md-button>
+                    <md-button ng-click="login()" class="md-raised md-primary">Connexion</md-button>
 
                 </form>
 
